--- a/index.html
+++ b/index.html
@@ -6,89 +6,97 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Студия</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href="">Web Studio</a>
-      <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+  <header class="header">
+    <nav class="site-nav">
+      <a href="" class="site-logo"><span class="logo-color">Web</span> Studio</a>
+      <ul class="nav-list">
+        <li class="list-item"><a href="" class="link">Студия</a></li>
+        <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+        <li class="list-item"><a href="" class="link">Контакты</a></li>
       </ul>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
+      <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
     </nav>
   </header>
-  <main>
-    <section>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+  <main class="main">
+    <section class="hero">
+      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <button type="button" class="hero-btn">Заказать услугу</button>
     </section>
-    <section>
-      <h2>Наши преимущества</h2>
+    <section class="section-features">
+      <h2 class="hidden-title">Наши преимущества</h2>
       <!--Данный заголовок h2 будет скрыт при помощи CSS но будет считываться индексатором и ассистивными технологиями-->
-      <ul>
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+      <ul class="features">
+        <li class="features-list">
+          <h3 class="features-title">Внимание к деталям</h3>
+          <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        <li class="features-list">
+          <h3 class="features-title">Пунктуальность</h3>
+          <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
-        <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        <li class="features-list">
+          <h3 class="features-title">Планирование</h3>
+          <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        <li class="features-list">
+          <h3 class="features-title">Современные технологии</h3>
+          <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
       </ul>
     </section>
-    <section>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li><img width="294" src="./images/tablet-and-scheme.jpg" alt="Набор текста на клавиатуре"></li>
-        <li><img width="294" src="./images/laptop.jpg" alt="Картинка телефона на планшете"></li>
-        <li><img width="294" src="./images/tablet-with-hexagon.jpg"
-            alt="Разноцветный шестигранник нарисованный на планшете"></li>
+    <section class="section-benefits">
+      <h2 class=title>Чем мы занимаемся</h2>
+      <ul class="benefits-list">
+        <li class="benefits-item"><img width="294" src="./images/tablet-and-scheme.jpg" alt="Набор текста на клавиатуре"
+            class="benefits-img"></li>
+        <li class="benefits-item"><img width="294" src="./images/laptop.jpg" alt="Картинка телефона на планшете"
+            class="benefits-img"></li>
+        <li class="benefits-item"><img width="294" src="./images/tablet-with-hexagon.jpg"
+            alt="Разноцветный шестигранник нарисованный на планшете" class="benefits-img"></li>
       </ul>
     </section>
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img width="260" src="./images/ihor-demyanenko.jpg" alt="Мужчина в красной рубашке и очках">
-          <h3>Игорь Демьяненко</h3>
-          <p>Product Designer</p>
+    <section class="user">
+      <h2 class=title>Наша команда</h2>
+      <ul class="user-list">
+        <li class="user-item">
+          <img width="260" src="./images/ihor-demyanenko.jpg" alt="Мужчина в красной рубашке и очках" class="user-img">
+          <h3 class="user-subtitle">Игорь Демьяненко</h3>
+          <p class="text">Product Designer</p>
         </li>
-        <li>
-          <img width="260" src="./images/olga-repina.jpg" alt="Девушка блондинка в очках и черном пиджаке">
-          <h3>Ольга Репина</h3>
-          <p>Frontend Developer</p>
+        <li class="user-item">
+          <img width="260" src="./images/olga-repina.jpg" alt="Девушка блондинка в очках и черном пиджаке"
+            class="user-img">
+          <h3 class="user-subtitle">Ольга Репина</h3>
+          <p class="text">Frontend Developer</p>
         </li>
-        <li>
-          <img width="260" src="./images/nikolay-tarasov.jpg" alt="Мужчина в голубой рубашке ">
-          <h3>Николай Тарасов</h3>
-          <p>Marketing</p>
+        <li class="user-item">
+          <img width="260" src="./images/nikolay-tarasov.jpg" alt="Мужчина в голубой рубашке " class="user-img">
+          <h3 class="user-subtitle">Николай Тарасов</h3>
+          <p class="text">Marketing</p>
         </li>
-        <li>
-          <img width="260" src="./images/mihail-ermakov.jpg" alt="Мужчина в черной футболке и очках">
-          <h3>Михаил Ермаков</h3>
-          <p>UI Designer</p>
+        <li class="user-item">
+          <img width="260" src="./images/mihail-ermakov.jpg" alt="Мужчина в черной футболке и очках" class="user-img">
+          <h3 class="user-subtitle">Михаил Ермаков</h3>
+          <p class="text">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-    <a href="">Web Studio</a>
-    <address>
-      г. Киев, пр-т Леси Украинки, 26
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+  <footer class="footer">
+    <a href="" class="site-logo">Web Studio</a>
+    <address class="address">
+      <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+      <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
+      <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
     </address>
   </footer>
 
