--- a/portfolio.html
+++ b/portfolio.html
@@ -6,30 +6,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="">Web Studio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="header">
+        <nav class="site-nav">
+            <a href="" class="site-logo"><span class="logo-color">Web</span> Studio</a>
+            <ul class="nav-list">
+                <li class="list-item"><a href="" class="link">Студия</a></li>
+                <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li class="list-item"><a href="" class="link">Контакты</a></li>
             </ul>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
         </nav>
     </header>
     <main>
-
+        <section class="section">
+            <h1 class="hidden-title">Наши работы</h1>
+            <ul>
+                <li><button type="button" class="btn">Все</button></li>
+                <li><button type="button" class="btn">Веб-сайты</button></li>
+                <li><button type="button" class="btn">Приложения</button></li>
+                <li><button type="button" class="btn">Дизайн</button></li>
+                <li><button type="button" class="btn">Маркетинг</button></li>
+            </ul>
+        </section>
+        <section class="section">
+            <ul class="list-project">
+                <li class="project-item">
+                    <img src="./images/technokryak.jpg" alt="Карточки людей" width="370" class="project-img">
+                    <h2 class="item-title">Технокряк</h2>
+                    <p class="item-text">Веб-сайт</p>
+                </li>
+                <li class="project-item">
+                    <img src="./images/poster.jpg" alt="Постер баскетбольного матча" width="370" class="project-img">
+                    <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="item-text">Дизфйн</p>
+                </li>
+                <li class="project-item">
+                    <img src="./images/seafood.jpg" alt="Эмблема ресторана" width="370" class="project-img">
+                    <h2 class="item-title">Ресторан seafood</h2>
+                    <p class="item-text">Приложение</p>
+                </li>
+                <li class="project-item"><img src="./images/project-prime.jpg" alt="Наушники на белом фоне" width="370"
+                        class="project-img">
+                    <h2 class="item-title">Проект Prime</h2>
+                    <p class="item-text">Маркетинг</p>
+                </li>
+                <li class="project-item">
+                    <img src="./images/project-boxes.jpg" alt="Коричневая и белая коробки" width="370"
+                        class="project-img">
+                    <h2 class="item-title">Проект Boxes</h2>
+                    <p class="item-text">Приложение</p>
+                </li>
+                <li class="project-item"><img src="./images/inspiration.jpg" alt="Веб-сайт на мониторе" width="370"
+                        class="project-img">
+                    <h2 class="item-title">Inspiration has no Borders</h2>
+                    <p class="item-text">Веб-сайт</p>
+                </li>
+                <li class="project-item"><img src="./images/limited-edition.jpg" alt="Расскрытая книга" width="370"
+                        class="project-img">
+                    <h2 class="item-title">Издание Limited Edition</h2>
+                    <p class="item-text">Дизайн</p>
+                </li>
+                <li class="project-item"><img src="./images/project-lab.jpg" alt="Бирка с надписью" width="370"
+                        class="project-img">
+                    <h2 class="item-title">Проект Lab</h2>
+                    <p class="item-text">Маркетинг</p>
+                </li>
+                <li class="project-item"><img src="./images/growing-business.jpg" alt="Печать на клавиатуре ноутбука"
+                        width="370" class="project-img">
+                    <h2 class="item-title">Growing Business</h2>
+                    <p class="item-text">Приложение</p>
+                </li>
+            </ul>
+        </section>
     </main>
-    <footer>
-        <a href="">Web Studio</a>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+        <a href="" class="site-logo">Web Studio</a>
+        <address class="address">
+            <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
         </address>
     </footer>
 
