--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header class="header">
     <nav class="site-nav">
-      <a href="" class="site-logo"><span class="logo-color">Web</span> Studio</a>
+      <a href="" class="site-logo">Web Studio</a>
       <ul class="nav-list">
         <li class="list-item"><a href="" class="link">Студия</a></li>
         <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
