--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <nav class="site-nav">
       <a href="" class="site-logo">Web Studio</a>
-      <ul class="nav-list">
+      <ul class="nav-list list">
         <li class="list-item"><a href="" class="link">Студия</a></li>
         <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
         <li class="list-item"><a href="" class="link">Контакты</a></li>
@@ -32,9 +32,8 @@
       <button type="button" class="hero-btn">Заказать услугу</button>
     </section>
     <section class="section-features">
-      <h2 class="hidden-title">Наши преимущества</h2>
-      <!--Данный заголовок h2 будет скрыт при помощи CSS но будет считываться индексатором и ассистивными технологиями-->
-      <ul class="features">
+      <h2 class="visually-hidden">Наши преимущества</h2>
+      <ul class="features list">
         <li class="features-list">
           <h3 class="features-title">Внимание к деталям</h3>
           <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -55,7 +54,7 @@
     </section>
     <section class="section-benefits">
       <h2 class=title>Чем мы занимаемся</h2>
-      <ul class="benefits-list">
+      <ul class="benefits-list list">
         <li class="benefits-item"><img width="294" src="./images/tablet-and-scheme.jpg" alt="Набор текста на клавиатуре"
             class="benefits-img"></li>
         <li class="benefits-item"><img width="294" src="./images/laptop.jpg" alt="Картинка телефона на планшете"
@@ -66,7 +65,7 @@
     </section>
     <section class="user">
       <h2 class=title>Наша команда</h2>
-      <ul class="user-list">
+      <ul class="user-list list">
         <li class="user-item">
           <img width="260" src="./images/ihor-demyanenko.jpg" alt="Мужчина в красной рубашке и очках" class="user-img">
           <h3 class="user-subtitle">Игорь Демьяненко</h3>
@@ -95,8 +94,8 @@
     <a href="" class="site-logo">Web Studio</a>
     <address class="address">
       <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-      <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
-      <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="mail-link footer-link">info@devstudio.com</a>
+      <a href="tel:+380961111111" class="tel-link footer-link">+38 096 111 11 11</a>
     </address>
   </footer>
 
