--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header class="header">
         <nav class="site-nav">
             <a href="" class="site-logo">Web Studio</a>
-            <ul class="nav-list">
+            <ul class="nav-list list">
                 <li class="list-item"><a href="./index.html" class="link">Студия</a></li>
                 <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li class="list-item"><a href="" class="link">Контакты</a></li>
@@ -29,17 +29,16 @@
     </header>
     <main>
         <section class="section">
-            <h1 class="hidden-title">Наши работы</h1>
-            <ul>
+            <h1 class="visually-hidden">Наши работы</h1>
+            <ul class="btn-list list">
                 <li><button type="button" class="btn">Все</button></li>
                 <li><button type="button" class="btn">Веб-сайты</button></li>
                 <li><button type="button" class="btn">Приложения</button></li>
                 <li><button type="button" class="btn">Дизайн</button></li>
                 <li><button type="button" class="btn">Маркетинг</button></li>
             </ul>
-        </section>
-        <section class="section">
-            <ul class="list-project">
+
+            <ul class="list-project list">
                 <li class="project-item">
                     <img src="./images/technokryak.jpg" alt="Карточки людей" width="370" class="project-img">
                     <h2 class="item-title">Технокряк</h2>
@@ -47,43 +46,43 @@
                 </li>
                 <li class="project-item">
                     <img src="./images/poster.jpg" alt="Постер баскетбольного матча" width="370" class="project-img">
-                    <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="item-text">Дизфйн</p>
+                    <h2 class="item-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                    <p class="item-text">Дизайн</p>
                 </li>
                 <li class="project-item">
                     <img src="./images/seafood.jpg" alt="Эмблема ресторана" width="370" class="project-img">
-                    <h2 class="item-title">Ресторан seafood</h2>
+                    <h2 class="item-title">Ресторан <span class="en">Seafood</span></h2>
                     <p class="item-text">Приложение</p>
                 </li>
                 <li class="project-item"><img src="./images/project-prime.jpg" alt="Наушники на белом фоне" width="370"
                         class="project-img">
-                    <h2 class="item-title">Проект Prime</h2>
+                    <h2 class="item-title">Проект <span class="en">Prime</span></h2>
                     <p class="item-text">Маркетинг</p>
                 </li>
                 <li class="project-item">
                     <img src="./images/project-boxes.jpg" alt="Коричневая и белая коробки" width="370"
                         class="project-img">
-                    <h2 class="item-title">Проект Boxes</h2>
+                    <h2 class="item-title">Проект <span class="en">Boxes</span></h2>
                     <p class="item-text">Приложение</p>
                 </li>
                 <li class="project-item"><img src="./images/inspiration.jpg" alt="Веб-сайт на мониторе" width="370"
                         class="project-img">
-                    <h2 class="item-title">Inspiration has no Borders</h2>
+                    <h2 class="item-title" lang="en">Inspiration has no Borders</h2>
                     <p class="item-text">Веб-сайт</p>
                 </li>
                 <li class="project-item"><img src="./images/limited-edition.jpg" alt="Расскрытая книга" width="370"
                         class="project-img">
-                    <h2 class="item-title">Издание Limited Edition</h2>
+                    <h2 class="item-title">Издание <span class="en">Limited Edition</span></h2>
                     <p class="item-text">Дизайн</p>
                 </li>
                 <li class="project-item"><img src="./images/project-lab.jpg" alt="Бирка с надписью" width="370"
                         class="project-img">
-                    <h2 class="item-title">Проект Lab</h2>
+                    <h2 class="item-title">Проект <span class="en">Limited Edition</span></h2>
                     <p class="item-text">Маркетинг</p>
                 </li>
                 <li class="project-item"><img src="./images/growing-business.jpg" alt="Печать на клавиатуре ноутбука"
                         width="370" class="project-img">
-                    <h2 class="item-title">Growing Business</h2>
+                    <h2 class="item-title" lang="en">Growing Business</h2>
                     <p class="item-text">Приложение</p>
                 </li>
             </ul>
@@ -93,8 +92,8 @@
         <a href="" class="site-logo">Web Studio</a>
         <address class="address">
             <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="mail-link footer-link">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="tel-link footer-link">+38 096 111 11 11</a>
         </address>
     </footer>
 
