--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header class="header">
     <nav class="site-nav">
-      <a href="" class="site-logo">Web Studio</a>
+      <a href="" class="site-logo">Web<span class="header-logo">Studio</span></a>
       <ul class="nav-list list">
         <li class="list-item"><a href="" class="link">Студия</a></li>
         <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -91,7 +91,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a href="" class="site-logo">Web Studio</a>
+    <a href="" class="site-logo">Web<span class="footer-logo">Studio</span></a>
     <address class="address">
       <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
       <a href="mailto:info@devstudio.com" class="mail-link footer-link">info@devstudio.com</a>
