--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="site-nav">
-            <a href="" class="site-logo">Web<span class="header-logo">Studio</span></a>
+            <a href="./index.html" class="site-logo">Web<span class="header-logo">Studio</span></a>
             <ul class="nav-list list">
                 <li class="list-item"><a href="./index.html" class="link">Студия</a></li>
                 <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="" class="site-logo">Web<span class="footer-logo">Studio</span></a>
+        <a href="./index.html" class="site-logo">Web<span class="footer-logo">Studio</span></a>
         <address class="address">
             <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
             <a href="mailto:info@devstudio.com" class="mail-link footer-link">info@devstudio.com</a>
